# mtk

./: Cargo.toml  Makefile  build.rs  muse.h  test.c
crates/mtk/: Cargo.toml
crates/mtk-macro/: Cargo.toml
crates/mtk-macro/src/: lib.rs
crates/mtk/examples/: calculator.rs  lenses.rs  nested_10k.rs  playground.rs  scroll_demo.rs  test_parley.rs  text_input_demo.rs
crates/mtk/src/: colors.rs  effects.rs  lib.rs  node.rs  render.rs  style.rs  text.rs
crates/mtk/src/animation/: mod.rs
crates/mtk/src/c/: muse.h
crates/mtk/src/ui/: adapter.rs  event.rs  lens.rs  memoize.rs  mod.rs  style.rs  widgets.rs
crates/mtk/src/ui/widgets/: editor.rs  input_text.rs  mod.rs  scroll_view.rs  text_input.rs  textarea.rs
crates/mtk/src/windowing/: al.rs  atlas.rs  mod.rs  renderer.rs  solid.wgsl  text.wgsl
examples/: calculator.rs  nested_10k.rs  xilem_style.rs
src/: colors.rs  effects.rs  lib.rs  main.rs  node.rs  style.rs  text.rs
src/animation/: math.rs  mod.rs
src/c/: muse.h  test.c
src/ui/: mod.rs  style.rs  widgets.rs
src/windowing/: al.rs  atlas.rs  mod.rs  renderer.rs  text.wgsl
