[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["luxluth <delphin.blehoussi93@gmail.com>"]
description = "Muse GUI Toolkit"

[workspace.dependencies]
bytemuck = "1.25.0"
cpal = "0.18"
env_logger = "0.11.11"
log = "0.4.33"
parley = "0.11.0"
pollster = "0.4.0"
resvg = "0.47.0"
swash = "0.2.9"
symphonia = { version = "0.6.0", features = ["mp3"] }
symphonia-bundle-mp3 = "0.6.0"
tiny-skia = "0.12.0"
wgpu = "29.0.3"
winit = "0.30.13"
zune-image = "0.5.0"
